# robo_swarm_fed

./: .gitignore  README.md  pyproject.toml
ai_brain/: README.md  dataset.py  eval.py  model.py  process_data.py  simple_mlp.py  train.py  train_local.py
ai_brain/federated/: README.md  client_app.py  server_app.py  strategy.py  task.py
ai_brain/legacy/: X_train.pt  fl_server.py  task.py  y_train.pt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robo_swarm_bringup/share/ament_index/resource_index/package_run_dependencies/: robo_swarm_bringup
install/robo_swarm_bringup/share/ament_index/resource_index/parent_prefix_path/: robo_swarm_bringup
install/robo_swarm_bringup/share/robo_swarm_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robo_swarm_bringup/share/robo_swarm_bringup/cmake/: robo_swarm_bringupConfig-version.cmake  robo_swarm_bringupConfig.cmake
install/robo_swarm_bringup/share/robo_swarm_bringup/config/: gazebo_bridge.yaml  my_robot_controllers.yaml
install/robo_swarm_bringup/share/robo_swarm_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/robo_swarm_bringup/share/robo_swarm_bringup/launch/: sim.launch.xml
install/robo_swarm_bringup/share/robo_swarm_bringup/worlds/: test_world.sdf
install/robo_swarm_controller/lib/robo_swarm_controller/: obstacle_avoidance  patrol_node
install/robo_swarm_controller/share/robo_swarm_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robo_swarm_description/share/ament_index/resource_index/parent_prefix_path/: robo_swarm_description
install/robo_swarm_description/share/robo_swarm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robo_swarm_description/share/robo_swarm_description/cmake/: robo_swarm_descriptionConfig-version.cmake  robo_swarm_descriptionConfig.cmake
install/robo_swarm_description/share/robo_swarm_description/environment/: ament_prefix_path.dsv  path.dsv
install/robo_swarm_description/share/robo_swarm_description/urdf/: common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
install/robo_swarm_interfaces/share/robo_swarm_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robo_swarm_interfaces/share/robo_swarm_interfaces/cmake/: robo_swarm_interfacesConfig-version.cmake  robo_swarm_interfacesConfig.cmake
install/robo_swarm_interfaces/share/robo_swarm_interfaces/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
robo_swarm_bringup/: CMakeLists.txt
robo_swarm_bringup/config/: gazebo_bridge.yaml
robo_swarm_bringup/launch/: sim.launch.xml
robo_swarm_controller/: README.md  package.xml  setup.cfg  setup.py
robo_swarm_controller/robo_swarm_controller/: data_collector.py  obstacle_avoidance.py  patrol_node.py
robo_swarm_description/: CMakeLists.txt  package.xml
robo_swarm_description/urdf/: mobile_base.xacro  mobile_base_gazebo.xacro
robo_swarm_interfaces/: CMakeLists.txt
test/: test_obstacle_avoidance.py
(+3 files in other folders)
